--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
+    "material-design-icons": "^3.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-paginate": "^6.3.2",
